adding turnstile to project from scrapping

--- a/index.html
+++ b/index.html
@@ -116,5 +116,6 @@
     }
     </script>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
 </html>
